--- a/app/views/births/multipleBirths3/parentsDetails/fathers-details.html
+++ b/app/views/births/multipleBirths3/parentsDetails/fathers-details.html
@@ -360,7 +360,7 @@ href: "javascript:window.history.back()"
       <div class="govuk-button-group">
         {{ govukButton({
         text: "Save and return",
-        href: "../tasks/index.html"
+        type: "submit"
         })
         }}
       </div>
