--- a/app/views/births/multipleBirths3/stats/confidential.html
+++ b/app/views/births/multipleBirths3/stats/confidential.html
@@ -18,34 +18,25 @@ href: "javascript:window.history.back()"
 
 {% block content %}
 
-
-
-
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <span class="govuk-caption-l">Statistics</span>
     <h1 class="govuk-heading-l">
       Confidential statistics
     </h1>
-
     <form class="form" action="confidential-check" method="post">
-
       <div id="authentication-code-hint" class="govuk-hint">
-        The law requires us to collect this information. Only the UK Statistics Authority and approved researchers can use it. It will not be entered in the register.
+        The law requires us to collect this information. Only the UK Statistics Authority and approved researchers can
+        use it. It will not be entered in the register.
       </div>
-
       <br>
-
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="dateOfDeathType-hint">
-
-
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" aria-describedby="motherDOBknown-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                 Does the informant know the mother’s date of birth?
               </legend>
-
               <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="motherDOBknown-yes" name="motherDOBknown"
@@ -55,7 +46,6 @@ href: "javascript:window.history.back()"
                     Yes
                   </label>
                 </div>
-
                 <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                   id="conditional-motherDOBknown-yes">
                   <div class="govuk-form-group">
@@ -101,20 +91,16 @@ href: "javascript:window.history.back()"
                     </fieldset>
                   </div>
                 </div>
-
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="motherDOBknown-no" name="motherDOBknown"
-                    value="MOTHER_DOB_UNKNOWN" {% if data.motherDOBknown=='MOTHER_DOB_UNKNOWN' %}checked{%
-                    endif %}>
+                    value="MOTHER_DOB_UNKNOWN" {% if data.motherDOBknown=='MOTHER_DOB_UNKNOWN' %}checked{% endif %}>
                   <label class="govuk-label govuk-radios__label" for="motherDOBknown-no">
                     No
                   </label>
                 </div>
-
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" type="radio" id="motherDOBknown-refused"
-                    name="motherDOBknown" value="MOTHER_DOB_REFUSED" {% if
-                    data.motherDOBknown=='MOTHER_DOB_REFUSED' %}checked{% endif %}>
+                  <input class="govuk-radios__input" type="radio" id="motherDOBknown-refused" name="motherDOBknown"
+                    value="MOTHER_DOB_REFUSED" {% if data.motherDOBknown=='MOTHER_DOB_REFUSED' %}checked{% endif %}>
                   <label class="govuk-label govuk-radios__label" for="motherDOBknown-refused">
                     Refused to answer
                   </label>
@@ -122,13 +108,11 @@ href: "javascript:window.history.back()"
               </div>
             </fieldset>
           </div>
-
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" aria-describedby="fatherDOBknown-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                 Does the informant know the father's date of birth?
               </legend>
-
               <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="fatherDOBknown-yes" name="fatherDOBknown"
@@ -138,7 +122,6 @@ href: "javascript:window.history.back()"
                     Yes
                   </label>
                 </div>
-
                 <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                   id="conditional-fatherDOBknown-yes">
                   <div class="govuk-form-group">
@@ -184,20 +167,18 @@ href: "javascript:window.history.back()"
                     </fieldset>
                   </div>
                 </div>
-
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="fatherDOBknown-no" name="fatherDOBknown"
-                    value="FATHER_DOB_UNKNOWN" {% if data.fatherDOBknown=='FATHER_DOB_UNKNOWN' %}checked{%
-                    endif %}>
+                    value="FATHER_DOB_UNKNOWN" {% if data.fatherDOBknown=='FATHER_DOB_UNKNOWN' %}checked{% endif %}>
                   <label class="govuk-label govuk-radios__label" for="fatherDOBknown-no">
                     No
                   </label>
                 </div>
 
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" type="radio" id="fatherDOBknown-refused"
-                    name="fatherDOBknown" value="MARRIAGE_DATE_REFUSED" {% if
-                    data.fatherDOBknown=='MARRIAGE_DATE_REFUSED' %}checked{% endif %}>
+                  <input class="govuk-radios__input" type="radio" id="fatherDOBknown-refused" name="fatherDOBknown"
+                    value="MARRIAGE_DATE_REFUSED" {% if data.fatherDOBknown=='MARRIAGE_DATE_REFUSED' %}checked{% endif
+                    %}>
                   <label class="govuk-label govuk-radios__label" for="fatherDOBknown-refused">
                     Refused to answer
                   </label>
@@ -205,14 +186,11 @@ href: "javascript:window.history.back()"
               </div>
             </fieldset>
           </div>
-
-          
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" aria-describedby="marriageDateKnown-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                 Does the informant know the date of the parent's marriage?
               </legend>
-
               <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="marriageDateKnown-yes" name="marriageDateKnown"
@@ -222,7 +200,6 @@ href: "javascript:window.history.back()"
                     Yes
                   </label>
                 </div>
-
                 <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                   id="conditional-marriageDateKnown-yes">
                   <div class="govuk-form-group">
@@ -268,7 +245,6 @@ href: "javascript:window.history.back()"
                     </fieldset>
                   </div>
                 </div>
-
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="marriageDateKnown-no" name="marriageDateKnown"
                     value="MARRIAGE_DATE_UNKNOWN" {% if data.marriageDateKnown=='MARRIAGE_DATE_UNKNOWN' %}checked{%
@@ -277,7 +253,6 @@ href: "javascript:window.history.back()"
                     No
                   </label>
                 </div>
-
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="marriageDateKnown-refused"
                     name="marriageDateKnown" value="MARRIAGE_DATE_REFUSED" {% if
@@ -289,60 +264,12 @@ href: "javascript:window.history.back()"
               </div>
             </fieldset>
           </div>
-
-
-         
-
-
-
-          <!-- 
-<div class="govuk-form-group">
-  <fieldset class="govuk-fieldset" aria-describedby="marriageDateKnown-hint">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-      Do you know the date of the parent's marriage?
-    </legend>
-
-    <div class="govuk-radios" data-module="govuk-radios">
-    
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" type="radio" id="marriageDateKnown-yes" name="marriageDateKnown"
-               value="MARRIAGE_DATE_KNOWN">
-        <label class="govuk-label govuk-radios__label" for="marriageDateKnown-yes">
-          Yes
-        </label>
-      </div>
-
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" type="radio" id="marriageDateKnown-no" name="marriageDateKnown"
-               value="MARRIAGE_DATE_UNKNOWN">
-        <label class="govuk-label govuk-radios__label" for="marriageDateKnown-no">
-          No
-        </label>
-      </div>
-
-    
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" type="radio" id="marriageDateKnown-refused" name="marriageDateKnown"
-               value="MARRIAGE_DATE_REFUSED">
-        <label class="govuk-label govuk-radios__label" for="marriageDateKnown-refused">
-          Refused to answer
-        </label>
-      </div>
-    </div>
-  </fieldset>
-</div> -->
-
-
-
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" aria-describedby="previousMarriageMother-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                 Has the mother been married or in a civil partnership before?
               </legend>
-
               <div class="govuk-radios" data-module="govuk-radios">
-                <!-- Option 1: Yes -->
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="previousMarriageMother-yes"
                     name="previousMarriageMother" value="PREVIOUS_MARRIAGE_MOTHER_YES">
@@ -350,8 +277,6 @@ href: "javascript:window.history.back()"
                     Yes
                   </label>
                 </div>
-
-                <!-- Option 2: No -->
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="previousMarriageMother-no"
                     name="previousMarriageMother" value="PREVIOUS_MARRIAGE_MOTHER_NO">
@@ -359,17 +284,13 @@ href: "javascript:window.history.back()"
                     No
                   </label>
                 </div>
-
-                 <!-- Option 3: Not known -->
-                 <div class="govuk-radios__item">
+                <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="previousMarriageMother-yes"
                     name="previousMarriageMother" value="PREVIOUS_MARRIAGE_MOTHER_YES">
                   <label class="govuk-label govuk-radios__label" for="previousMarriageMother-yes">
                     Not known
                   </label>
                 </div>
-
-                <!-- Option 3: Refused to answer -->
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="previousMarriageMother-refused"
                     name="previousMarriageMother" value="PREVIOUS_MARRIAGE_MOTHER_REFUSED">
@@ -380,9 +301,6 @@ href: "javascript:window.history.back()"
               </div>
             </fieldset>
           </div>
-
-
-
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" aria-describedby="liveBirthsMother-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
@@ -397,33 +315,28 @@ href: "javascript:window.history.back()"
                     Yes
                   </label>
                 </div>
-
-            
-
                 <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
-                id="conditional-liveBirthsMother-yes">
-             <div class="govuk-form-group">
-               <h3 class="govuk-heading-s">How many children?</h3>
-               <div style="display: flex; gap: 10px;">
-                 <div>
-                   <label class="govuk-label" for="numberOfChildrenBornAlive">
-                     Born alive
-                   </label>
-                   <input class="govuk-input govuk-input--width-5" id="numberOfChildrenBornAlive"
+                  id="conditional-liveBirthsMother-yes">
+                  <div class="govuk-form-group">
+                    <h3 class="govuk-heading-s">How many children?</h3>
+                    <div style="display: flex; gap: 10px;">
+                      <div>
+                        <label class="govuk-label" for="numberOfChildrenBornAlive">
+                          Born alive
+                        </label>
+                        <input class="govuk-input govuk-input--width-5" id="numberOfChildrenBornAlive"
                           name="numberOfChildrenBornAlive" type="text">
-                 </div>
-                 <div>
-                   <label class="govuk-label" for="numberOfChildrenStillborn">
-                     Stillborn
-                   </label>
-                   <input class="govuk-input govuk-input--width-5" id="numberOfChildrenStillborn"
+                      </div>
+                      <div>
+                        <label class="govuk-label" for="numberOfChildrenStillborn">
+                          Stillborn
+                        </label>
+                        <input class="govuk-input govuk-input--width-5" id="numberOfChildrenStillborn"
                           name="numberOfChildrenStillborn" type="text">
-                 </div>
-               </div>
-             </div>
-           </div>
-           
-
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="liveBirthsMother-no" name="liveBirthsMother"
                     value="LIVE_BIRTHS_MOTHER_NO">
@@ -439,7 +352,6 @@ href: "javascript:window.history.back()"
                     Not known
                   </label>
                 </div>
-
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" type="radio" id="liveBirthsMother-refused" name="liveBirthsMother"
                     value="LIVE_BIRTHS_MOTHER_REFUSED">
@@ -450,78 +362,13 @@ href: "javascript:window.history.back()"
               </div>
             </fieldset>
           </div>
-
-
-          
-
-
-          <!-- <div class="govuk-form-group">
-  <fieldset class="govuk-fieldset" aria-describedby="stillbirthsMother-hint">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-      Has the mother had any stillborn children before?
-    </legend>
-
-    <div class="govuk-radios" data-module="govuk-radios">
-   
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" type="radio" id="stillbirthsMother-yes" name="stillbirthsMother"
-               value="STILLBIRTHS_MOTHER_YES">
-        <label class="govuk-label govuk-radios__label" for="stillbirthsMother-yes">
-          Yes
-        </label>
-      </div>
-  
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" type="radio" id="stillbirthsMother-no" name="stillbirthsMother"
-               value="STILLBIRTHS_MOTHER_NO">
-        <label class="govuk-label govuk-radios__label" for="stillbirthsMother-no">
-          No
-        </label>
-      </div>
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" type="radio" id="stillbirthsMother-unknown" name="stillbirthsMother"
-               value="STILLBIRTHS_MOTHER_UNKNOWN">
-        <label class="govuk-label govuk-radios__label" for="stillbirthsMother-unknown">
-          Not known
-        </label>
-      </div>
-  
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" type="radio" id="stillbirthsMother-refused" name="stillbirthsMother"
-               value="STILLBIRTHS_MOTHER_REFUSED">
-        <label class="govuk-label govuk-radios__label" for="stillbirthsMother-refused">
-          Refused to answer
-        </label>
-      </div>
-    </div>
-  </fieldset>
-</div> -->
-
-
-
-
-
-
-
           <div class="govuk-button-group">
             {{ govukButton({
             text: "Save and return",
-            href: "../tasks/index.html"
+            type: "submit"
             }) }}
           </div>
-
     </form>
-
   </div>
 </div>
-
-
-
-
-
-<!-- Load the JS from views/latest/ -->
-
-
-
 {% endblock %}
