--- a/app/views/births/multipleBirths3/submit/register-page.html
+++ b/app/views/births/multipleBirths3/submit/register-page.html
@@ -6,18 +6,14 @@ Select the registrar’s designation – {{ serviceName }} – GOV.UK Prototype 
 
 {% block beforeContent %}
 
-
-
 {{ govukBackLink({
 text: "Back to record",
 href: "javascript:window.history.back()"
 }) }}
 
-
 {% endblock %}
 
 {% block content %}
-
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -83,19 +79,13 @@ href: "javascript:window.history.back()"
               </label>
             </div>
           </div>
-
-
-
-
-
-
         </fieldset>
       </div>
 
       <div class="govuk-button-group">
         {{ govukButton({
         text: "Save and return",
-        href: "../tasks/index.html"
+        type: "submit"
         }) }}
       </div>
 
@@ -103,7 +93,5 @@ href: "javascript:window.history.back()"
 
   </div>
 </div>
-
-
 
 {% endblock %}
