--- a/app/views/births/multipleBirths3/tasks/index.html
+++ b/app/views/births/multipleBirths3/tasks/index.html
@@ -15,7 +15,8 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths3/childsDetails/02-place-of-birth.html">
+          <a class="govuk-link govuk-task-list__link"
+            href="/births/multipleBirths3/childsDetails/02-place-of-birth.html">
             Place of birth
           </a>
         </div>
@@ -45,7 +46,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
     </ul>
 
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Parents' details</h2>
-     <ul class="govuk-task-list">
+    <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths3/parentsDetails/mothers-name">
@@ -68,14 +69,14 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           </a>
         </div>
         <div class="govuk-task-list__status">
-           {% if data.mothersDetailsCompleted %}
+          {% if data.mothersDetailsCompleted %}
           Completed
           {% else %}
           <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
           {% endif %}
         </div>
       </li>
-       <li class="govuk-task-list__item">
+      <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths3/parentsDetails/fathers-name">
             Father's names
@@ -97,7 +98,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           </a>
         </div>
         <div class="govuk-task-list__status">
-           {% if data.fathersDetailsCompleted %}
+          {% if data.fathersDetailsCompleted %}
           Completed
           {% else %}
           <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
@@ -107,7 +108,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
     </ul>
 
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Statistics</h2>
-     <ul class="govuk-task-list">
+    <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths3/stats/confidential.html">
@@ -130,76 +131,79 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           </a>
         </div>
         <div class="govuk-task-list__status">
-           {% if data.statsVoluntaryCompleted %}
+          {% if data.statsVoluntaryCompleted %}
           Completed
           {% else %}
           <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
           {% endif %}
         </div>
       </li>
-      </ul>
+    </ul>
 
-      <h2 class="govuk-heading-m">Additional information</h2>
-       <ul class="govuk-task-list">
-         <li class="govuk-task-list__item">
+    <h2 class="govuk-heading-m">Additional information</h2>
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths3/additionalInfo/comments">
-            Registrar's comments</a> 
+            Registrar's comments</a>
         </div>
         <div class="govuk-task-list__status">
-            <strong class="govuk-tag govuk-tag--yellow">Optional</strong>
+          <strong class="govuk-tag govuk-tag--yellow">Optional</strong>
         </div>
       </li>
-       </ul>
+    </ul>
 
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Submit the registration</h2>
-     <ul class="govuk-task-list">
+    <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint govuk-!-width-two-thirds">
-          {% if not (data.statsConfidentialCompleted) %}
+          {% set allPagesComplete = data.placeCompleted and data.nameDateCompleted and data.mothersNameCompleted and
+          data.mothersDetailsCompleted and data.fathersNameCompleted and data.fathersDetailsCompleted and
+          data.statsConfidentialCompleted and data.statsVoluntaryCompleted %}
+          {% if not allPagesComplete %}
           <div class="govuk-task-list__hint ">
             Registrar's details
           </div>
-           {% else %}
- <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths3/submit/register-page">
+          {% else %}
+          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths3/submit/register-page">
             Registrar's details
           </a>
-           {% endif %}
+          {% endif %}
         </div>
-        
-<div class="govuk-task-list__status">
-      {% if not data.statsConfidentialCompleted %}
-        <strong class="govuk-tag govuk-tag--grey">Cannot start yet</strong>
-      {% elif data.statsConfidentialCompleted and not data.registerPageCompleted %}
-        <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
-      {% elif data.registerPageCompleted %}
-        Completed
-      {% endif %}
-    </div>
+
+        <div class="govuk-task-list__status">
+          {% if not allPagesComplete %}
+          <strong class="govuk-tag govuk-tag--grey">Cannot start yet</strong>
+          {% elif allPagesComplete and not data.registerPageCompleted %}
+          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
+          {% elif data.registerPageCompleted %}
+          Completed
+          {% endif %}
+        </div>
 
       </li>
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint govuk-!-width-two-thirds">
           <div class="govuk-task-list__hint ">
-{% if not (data.registerPageCompleted) %}
-          <div class="govuk-task-list__hint ">
-            Check your answers
-          </div>
-           {% else %}
- <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths3/submit/check-answers-page">
-            Check your answers
-          </a>
-           {% endif %}
+            {% if not (data.registerPageCompleted) %}
+            <div class="govuk-task-list__hint ">
+              Check your answers
+            </div>
+            {% else %}
+            <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths3/submit/check-answers-page">
+              Check your answers
+            </a>
+            {% endif %}
           </div>
         </div>
         <div class="govuk-task-list__status">
-           {% if not data.registerPageCompleted %}
-        <strong class="govuk-tag govuk-tag--grey">Cannot start yet</strong>
-      {% elif data.registerPageCompleted and not data.checkAnswersCompleted %}
-        <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
-      {% elif data.registerPageCompleted %}
-        Completed
-      {% endif %}
+          {% if not data.registerPageCompleted %}
+          <strong class="govuk-tag govuk-tag--grey">Cannot start yet</strong>
+          {% elif data.registerPageCompleted and not data.checkAnswersCompleted %}
+          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
+          {% elif data.registerPageCompleted %}
+          Completed
+          {% endif %}
         </div>
       </li>
     </ul>
@@ -208,6 +212,6 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <p><a href="#" class="govuk-link" style="color: #d4351c;">Delete record</a></p>
-    </div>
+  </div>
 </div>
 {% endblock %}
